# pfund-kits

./: README.md  pixi.toml  pyproject.toml  pytest.ini
src/pfund_kit/: __init__.py  config.py  main.py  paths.py  style.py
src/pfund_kit/logging/: __init__.py
src/pfund_kit/logging/filters/: trimmed_path_filter.py
src/pfund_kit/logging/loggers/: colored_logger.py
src/pfund_kit/pfund_shell/: main.py
src/pfund_kit/utils/: __init__.py  progress_bar.py  toml.py
src/pfund_kits/: config.py  main.py
src/pfund_kits/cli/: main.py
src/pfund_kits/logging/: __init__.py
src/pfund_kits/utils/: __init__.py
tests/: test_config.py  test_paths.py
